[gd_scene load_steps=3 format=3 uid="uid://cvkfc0ykyht8c"]

[ext_resource type="Script" path="res://scenes/main_menu_canvas.gd" id="1_8ic3n"]
[ext_resource type="Theme" uid="uid://bmv1ak3cxlbqy" path="res://scenes/main_theme_text.tres" id="1_jubfl"]

[node name="MainMenuCanvas" type="CanvasLayer"]
script = ExtResource("1_8ic3n")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jubfl")

[node name="Panel" type="Panel" parent="MainMenu"]
self_modulate = Color(0.621458, 0.919754, 0.668143, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 147.0
offset_right = 181.0
offset_bottom = 188.0
grow_horizontal = 2
text = "-- MENU --"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -148.0
offset_right = 180.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="start" type="Button" parent="MainMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start game"

[node name="continue" type="Button" parent="MainMenu/Panel/VBoxContainer"]
visible = false
self_modulate = Color(0.356863, 0.854902, 1, 1)
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="donate" type="Button" parent="MainMenu/Panel/VBoxContainer"]
self_modulate = Color(0.2, 1, 0.52549, 1)
layout_mode = 2
size_flags_vertical = 3
text = "Donate"

[node name="exit" type="Button" parent="MainMenu/Panel/VBoxContainer"]
self_modulate = Color(0.811765, 0.4, 0, 1)
layout_mode = 2
size_flags_vertical = 3
text = "EXIT"

[node name="HTTPRequestPlayerData" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 450.0
offset_top = -300.0
offset_right = -451.0
offset_bottom = -273.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0

[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/donate" to="." method="_on_donate_pressed"]
[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="request_completed" from="HTTPRequestPlayerData" to="." method="_on_http_request_player_data_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
